Add ingredients to chicken soup recipe
placed an unordered list containing the ingredients for chicken soup
in the correct file

--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -6,6 +6,27 @@
   </head>
   <body>
     <h1>Chicken Soup</h1>
-    <img src="chickensoup.jpeg">
+    <img src="chickensoup.jpeg" alt="Picture of chicken soup.">
+    <h2>Description</h2>
+    <p>Kerry's famous chicken soup is delicious and hearty, a family 
+      favorite demanded by sick O'Shea's everywhere.</p>
+    <p> Primarily flavored by the interplay of carrots and parsnip,
+      with a kick of dill, this noodle free soup is the perfect
+      complement to an crisp autumn day.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>4 32 oz. Boxes College Inn Chicken Broth</li>
+      <li>10-12 chicken drumsticks</li>
+      <li>2 lbs. carrots, peeled and chunked</li>
+      <li>2 lbs. parsnips, peeled and chunked</li>
+      <li>1 purple top turnip, peeled and chunked</li>
+      <li>1 stalk celery</li>
+      <li>1 yellow onion</li>
+      <li>plain parsley to taste</li>
+      <li>dill to taste</li>
+      <li>8 oz. can yellow corn</li>
+    </ul>
+    <h2>Steps</h2>
   </body>
 </html>
