Add steps to chicken soup recipe
Added ordered list of steps to the chicken soup recipe

--- a/recipes/chicken-soup.html
+++ b/recipes/chicken-soup.html
@@ -28,5 +28,21 @@
       <li>8 oz. can yellow corn</li>
     </ul>
     <h2>Steps</h2>
+    <ol>
+      <li>Prep and chop all fresh vegetables and herbs.</li>
+      <li>Place vegetables and herbs in a large soup pot.</li>
+      <li>Add drumsticks and chicken broth.</li>
+      <li>Bring to a boil, stirring occasionally, until
+        chicken is tender.
+      </li>
+      <li>Remove chicken from pot and run under cold
+        water to cool.
+      </li>
+      <li>Separate skin, bones and gristle from meat,
+        returning meat to pot.
+      </li>
+      <li>Add canned corn to pot.</li>
+      <li>Serve hot.</li>
+    </ol>
   </body>
 </html>
