Add pizza bagel recipe
Added the whole pizza bagel recipe in one go.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-soup.html">Chicken Soup</a>
+    <ul>
+      <li><a href="recipes/chicken-soup.html">Chicken Soup</a></li>
+      <li><a href="recipes/pizza-bagels.html">Pizza Bagels</a></li>
+    </ul>
   </body>
 </html>
