Finish spaghetti and meat sauce
Added steps and added to index file

--- a/recipes/spaghetti-meat-sauce.html
+++ b/recipes/spaghetti-meat-sauce.html
@@ -17,7 +17,11 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-      
+      <li>Brown ground beef. Drain.</li>
+      <li>Combine sauce and beef, bring to a boil, then reduce heat to low.</li>
+      <li>Boil a pot of water.</li>
+      <li>Add pasta and boil 7-11 minutes until tender. Drain.</li>
+      <li>Combine pasta and sauce. Serve.</li>
     </ol>
   </body>
 </html>
