--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="recipes/chicken-soup.html">Chicken Soup</a></li>
       <li><a href="recipes/pizza-bagels.html">Pizza Bagels</a></li>
+      <li><a href="recipes/spaghetti-meat-sauce.html">Spaghetti and Meat Sauce</a></li>
     </ul>
   </body>
 </html>
